<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:example="http://schemas.android.com/apk/res-auto">
	<item 
		android:id="@+id/ab_button_refresh"
		android:title="@string/ab_button_refresh"
		android:icon="@drawable/ic_menu_refresh"
		android:orderInCategory="1"
		example:showAsAction="ifRoom" />
	
	<item 
		android:id="@+id/ab_button_list"
		android:title="@string/ab_button_list"
		android:orderInCategory="2"
		example:showAsAction="ifRoom"
        android:icon="@drawable/more">
		<menu>
            <item
                android:id="@+id/ab_button_list_change_background"
                android:title="@string/ab_button_list_change_background"
                android:icon="@null"
                android:orderInCategory="1" />
            <item
                android:id="@+id/ab_button_list_house_statistics"
                android:title="@string/ab_button_list_statistics"
                android:icon="@null"
                android:orderInCategory="2" />
            <item
                android:id="@+id/ab_button_list_about"
                android:title="@string/ab_button_list_about"
                android:icon="@null"
                android:orderInCategory="3" />
			<item
				android:id="@+id/ab_button_list_settings"
				android:title="@string/ab_button_list_settings"
				android:icon="@null"
				android:orderInCategory="4" />
		</menu>
	</item>
</menu>
